--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="muted">左鍵：加入到輸出欄 • 編輯：按右側鉛筆 • 刪除：按右側圓形 × • 拖曳支援跨群組</div>
     </div>
     <div class="control-row">
-      <label class="muted">存檔 Key</label>
+      <label class="muted">使用者</label>
       <input id="saveKey" type="text" value="Config1" style="width:140px" />
       <label class="muted">恢復記錄數</label>
       <input id="historyLimit" type="number" min="1" value="50" style="width:72px" />
